Updated yaml. Renamed Profile to Template. Added in Quality Version.
